Ensure DeltaFiles are fetched in a single database transaction